Update generated Java sources and tests. Update README